--- a/css/estilos.css
+++ b/css/estilos.css
@@ -92,7 +92,7 @@
   
   header {
     position: fixed;
-    z-index: 9999999;
+    z-index: 999;
     width: 100%;
   }
   header nav div a {
@@ -458,6 +458,52 @@
     display: block;
     width: 200px;
     height: 300px;
+  }
+
+  .ventana-pago{
+    position: absolute;
+    background-color: #000000;
+    color: #ffffff;
+    text-align: center;
+    font-size: 28px;
+    width: 70%;
+    left: 15%;
+    bottom: 25%;
+    font-family: 'poppins', sans-serif;
+    background-color: #000000;
+    padding: 5%;
+    border-radius: 50px;
+  }
+
+  #pagos{
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    bottom: 0%;
+    z-index: 9999;
+    background-color: #000000b4;
+  }
+
+  .cerrar-pago{
+    position: absolute;
+    background-color: #000000;
+    border: 0;
+    color: #ffffff;
+    font-size: 40px;
+    top: 5%;
+    right: 5%;
+  }
+
+  .desplazar-block{
+    overflow: hidden;
+  }
+
+  .desplazar-auto{
+    overflow: auto;
+  }
+
+  .tabla-pago{
+    width: 100%;
   }
   
   @media (max-width: 768px) {
