--- a/css/estilos.css
+++ b/css/estilos.css
@@ -468,7 +468,7 @@
     font-size: 28px;
     width: 70%;
     left: 15%;
-    bottom: 25%;
+    bottom: 10%;
     font-family: 'poppins', sans-serif;
     background-color: #000000;
     padding: 5%;
@@ -504,6 +504,54 @@
 
   .tabla-pago{
     width: 100%;
+  }
+
+  .pasos{
+    position: relative;
+    display: grid;
+    
+    width: 100%;
+  }
+
+  .indice-guia{
+    justify-items: center;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    grid-template-rows: 1fr 1fr;
+    margin-top: 3%;
+    width: 100%;
+  }
+
+  .barra{
+    background-color: #ffffff;
+    width: 40%;
+    font-size: 0px;
+    margin-top: 2%;
+    height: 10px;
+    border-radius: 50px;
+  }
+
+  .completo{
+    background-color: #4b9b4f;
+  }
+
+  .actual{
+    background-color: #ffffff;
+  }
+
+  .desactivado{
+    background-color: #9c9c9c;
+  }
+
+  .siguiente{
+    font-family: "poppins", sans-serif;
+    font-size: 28px;
+    border-radius: 30px;
+    margin: 10px 0px;
+    padding: 0px 20px;
+    text-align: center;
+    background-color: #000000;
+    color: #ffffff;
   }
   
   @media (max-width: 768px) {
